feat(api): add `sortDir` and `sortParam` to '/{scopeId}/credentials' endpoint
Implemented sorting functionality for the '/{scopeId}/credentials' API by adding query parameters `sortDir` and `sortParam`. This feature allows sorting of credentials information based on the specified field (`sortParam`) in either ascending or descending order
