# rest-api/resources/src/main/resources/openapi/credential/credential-scopeId.yaml
@@ -25,6 +25,16 @@ paths:
           description: The optional id to filter results
           schema:
             $ref: '../openapi.yaml#/components/schemas/kapuaId'
+        - $ref: '../openapi.yaml#/components/parameters/sortParam'
+        - name: sortDir
+          in: query
+          description: The sort direction. Can be ASCENDING (default), DESCENDING. Case-insensitive (except for "clientId" parameter).
+          schema:
+            type: string
+            enum:
+              - ASCENDING
+              - DESCENDING
+            default: ASCENDING
         - $ref: '../openapi.yaml#/components/parameters/limit'
         - $ref: '../openapi.yaml#/components/parameters/offset'
 
